# WTI_catkin

./: README.md
NMPC_code_generator/acado_ccode_generation/: CMakeLists.txt
NMPC_implementations/PAMPC/solver/: nmpc_common.h  nmpc_solver.c
NMPC_implementations/PAMPC/src/: nmpc_pc_learning_main.cpp
NMPC_implementations/nmpc_pc_learning/include/: nmpc_pc_learning_main.h
NMPC_implementations/nmpc_pc_learning/src/: nmpc_pc_learning.cpp  nmpc_pc_learning_main.cpp
NMPC_implementations/nmpc_pc_point_traj/: CMakeLists.txt  package.xml
NMPC_implementations/nmpc_pc_point_traj/include/: nmpc_pc_learning.h  nmpc_pc_learning_main.h
Results/Plotting_Script/: redundancy.m  results_gen.asv  results_gen.m
Trajectory_generation_coverage/coverage/: coverage.py
Trajectory_generation_coverage/python_scripts-master/: coverage.py
dji_m100_trajectory/: CMakeLists.txt
dji_m100_trajectory/Exp_data/: WS_GP-NMPC_Wind3-XY-3N-10sec_Noise_Gauss-03_sim_video2 (copy).txt  name_file.txt  test1 (copy).txt
dji_m100_trajectory/cfg/: set_recdata.cfg  set_trajectory_v2.cfg  set_wind_generation.cfg
dji_m100_trajectory/include/: recdata.h  trajectory_v2.h
dji_m100_trajectory/launch/: m100_trajectory_v2_indoor.launch
dji_m100_trajectory/src/: GP_statemachine.cpp  GP_statemachine_pid.cpp  point_node.cpp  recdata.cpp  trajectory_v2.cpp  wind_generation.cpp  wind_node.py
mocap/: CMakeLists.txt
rqt_multiplot_configs/: matrice_100_wind_estimation.xml
stl_gen/: a.out  create_stl.cpp  stl_gen.cpp  turbine.stl
test_scripts/: coverage_script.cpp  hakim.txt  interpolation.py  l_3_g_40.txt  l_5_g_45.txt  myData.txt  myData_1.txt  psi.txt  s_dot.asv  s_dot.m
wind_model/: CMakeLists.txt  package.xml
(+102 files in other folders)
